--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
     "from networkx.readwrite import json_graph\n",
     "from fourlang.text_to_4lang import TextTo4lang\n",
     "from graphviz import Source\n",
-    "from parse_data import read\n",
-    "from similarity import *"
+    "from scripts.parse_data import read\n",
+    "from scripts.similarity import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,19 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "index = 2\n",
     "premise = data_frame.premise[index]\n",
     "hypothesis = data_frame.hypothesis[index]\n",
-    "score = data_frame.graded[index]"
+    "score = data_frame.score[index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -84,34 +84,34 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(.9722 .9722) rotate(0) translate(4 262.9815)\">\n",
        "<title>finite_state_machine</title>\n",
        "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-262.9815 229.9908,-262.9815 229.9908,4 -4,4\"/>\n",
-       "<!-- difendere_139782076270296 -->\n",
+       "<!-- difendere_139782093089256 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>difendere_139782076270296</title>\n",
+       "<title>difendere_139782093089256</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"105.1961\" cy=\"-214.7855\" rx=\"44.393\" ry=\"44.393\"/>\n",
        "<text text-anchor=\"middle\" x=\"105.1961\" y=\"-211.0855\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">difendere</text>\n",
        "</g>\n",
-       "<!-- individuo_139782075832192 -->\n",
+       "<!-- individuo_139782028290648 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>individuo_139782075832192</title>\n",
+       "<title>individuo_139782028290648</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"44.1961\" cy=\"-59.7947\" rx=\"44.393\" ry=\"44.393\"/>\n",
        "<text text-anchor=\"middle\" x=\"44.1961\" y=\"-56.0947\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">individuo</text>\n",
        "</g>\n",
-       "<!-- difendere_139782076270296&#45;&gt;individuo_139782075832192 -->\n",
+       "<!-- difendere_139782093089256&#45;&gt;individuo_139782028290648 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>difendere_139782076270296&#45;&gt;individuo_139782075832192</title>\n",
+       "<title>difendere_139782093089256&#45;&gt;individuo_139782028290648</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M89.0093,-173.6577C81.3918,-154.3027 72.2336,-131.0334 64.1872,-110.5888\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"67.3776,-109.1381 60.4584,-101.1147 60.864,-111.7017 67.3776,-109.1381\"/>\n",
        "<text text-anchor=\"middle\" x=\"83.6961\" y=\"-141.3894\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">2</text>\n",
        "</g>\n",
-       "<!-- salvaguardare_139782091417248 -->\n",
+       "<!-- salvaguardare_139782093087856 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>salvaguardare_139782091417248</title>\n",
+       "<title>salvaguardare_139782093087856</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"166.1961\" cy=\"-59.7947\" rx=\"59.5901\" ry=\"59.5901\"/>\n",
        "<text text-anchor=\"middle\" x=\"166.1961\" y=\"-56.0947\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">salvaguardare</text>\n",
        "</g>\n",
-       "<!-- difendere_139782076270296&#45;&gt;salvaguardare_139782091417248 -->\n",
+       "<!-- difendere_139782093089256&#45;&gt;salvaguardare_139782093087856 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>difendere_139782076270296&#45;&gt;salvaguardare_139782091417248</title>\n",
+       "<title>difendere_139782093089256&#45;&gt;salvaguardare_139782093087856</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M121.3828,-173.6577C127.2248,-158.8141 133.973,-141.6682 140.4308,-125.2599\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"143.785,-126.2942 144.1905,-115.7071 137.2713,-123.7306 143.785,-126.2942\"/>\n",
        "<text text-anchor=\"middle\" x=\"137.6961\" y=\"-141.3894\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">0</text>\n",
@@ -120,10 +120,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f218d008630>"
+       "<graphviz.files.Source at 0x7f218e0245c0>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -151,66 +151,66 @@
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(.9722 .9722) rotate(0) translate(4 339.9792)\">\n",
        "<title>finite_state_machine</title>\n",
        "<polygon fill=\"#ffffff\" stroke=\"transparent\" points=\"-4,4 -4,-339.9792 292.4925,-339.9792 292.4925,4 -4,4\"/>\n",
-       "<!-- agevolare_139782075831800 -->\n",
+       "<!-- agevolare_139782028289752 -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>agevolare_139782075831800</title>\n",
+       "<title>agevolare_139782028289752</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"44.846\" cy=\"-143.9418\" rx=\"44.6926\" ry=\"44.6926\"/>\n",
        "<text text-anchor=\"middle\" x=\"44.846\" y=\"-140.2418\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">agevolare</text>\n",
        "</g>\n",
-       "<!-- lecito_139782075832080 -->\n",
+       "<!-- lecito_139782028288856 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>lecito_139782075832080</title>\n",
+       "<title>lecito_139782028288856</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"248.846\" cy=\"-143.9418\" rx=\"30.5947\" ry=\"30.5947\"/>\n",
        "<text text-anchor=\"middle\" x=\"248.846\" y=\"-140.2418\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">lecito</text>\n",
        "</g>\n",
-       "<!-- non_139782075832360 -->\n",
+       "<!-- non_139782028288744 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>non_139782075832360</title>\n",
+       "<title>non_139782028288744</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"248.846\" cy=\"-24.0479\" rx=\"24.0958\" ry=\"24.0958\"/>\n",
        "<text text-anchor=\"middle\" x=\"248.846\" y=\"-20.3479\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">non</text>\n",
        "</g>\n",
-       "<!-- lecito_139782075832080&#45;&gt;non_139782075832360 -->\n",
+       "<!-- lecito_139782028288856&#45;&gt;non_139782028288744 -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>lecito_139782075832080&#45;&gt;non_139782075832360</title>\n",
+       "<title>lecito_139782028288856&#45;&gt;non_139782028288744</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M248.846,-113.3772C248.846,-96.6008 248.846,-75.7454 248.846,-58.4061\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"252.3461,-58.1322 248.846,-48.1322 245.3461,-58.1322 252.3461,-58.1322\"/>\n",
        "<text text-anchor=\"middle\" x=\"252.346\" y=\"-69.8957\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">0</text>\n",
        "</g>\n",
-       "<!-- maniera_139782075833256 -->\n",
+       "<!-- maniera_139782028289976 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>maniera_139782075833256</title>\n",
+       "<title>maniera_139782028289976</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"248.846\" cy=\"-287.8835\" rx=\"39.7935\" ry=\"39.7935\"/>\n",
        "<text text-anchor=\"middle\" x=\"248.846\" y=\"-284.1835\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">maniera</text>\n",
        "</g>\n",
-       "<!-- maniera_139782075833256&#45;&gt;lecito_139782075832080 -->\n",
+       "<!-- maniera_139782028289976&#45;&gt;lecito_139782028288856 -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>maniera_139782075833256&#45;&gt;lecito_139782075832080</title>\n",
+       "<title>maniera_139782028289976&#45;&gt;lecito_139782028288856</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M248.846,-248.1698C248.846,-228.5604 248.846,-204.9227 248.846,-185.1188\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"252.3461,-184.8581 248.846,-174.8582 245.3461,-184.8582 252.3461,-184.8581\"/>\n",
        "<text text-anchor=\"middle\" x=\"252.346\" y=\"-210.5878\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">0</text>\n",
        "</g>\n",
-       "<!-- proteggere_139782076271248 -->\n",
+       "<!-- proteggere_139782093089368 -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>proteggere_139782076271248</title>\n",
+       "<title>proteggere_139782093089368</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"93.846\" cy=\"-287.8835\" rx=\"48.1917\" ry=\"48.1917\"/>\n",
        "<text text-anchor=\"middle\" x=\"93.846\" y=\"-284.1835\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">proteggere</text>\n",
        "</g>\n",
-       "<!-- proteggere_139782076271248&#45;&gt;agevolare_139782075831800 -->\n",
+       "<!-- proteggere_139782093089368&#45;&gt;agevolare_139782028289752 -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>proteggere_139782076271248&#45;&gt;agevolare_139782075831800</title>\n",
+       "<title>proteggere_139782093089368&#45;&gt;agevolare_139782028289752</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M78.3421,-242.3394C73.3741,-227.7455 67.8331,-211.4681 62.7105,-196.4203\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"65.9509,-195.0779 59.415,-186.7393 59.3243,-197.3338 65.9509,-195.0779\"/>\n",
        "<text text-anchor=\"middle\" x=\"74.346\" y=\"-210.5878\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">0</text>\n",
        "</g>\n",
-       "<!-- qualcuno_139782075831632 -->\n",
+       "<!-- qualcuno_139782028290592 -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>qualcuno_139782075831632</title>\n",
+       "<title>qualcuno_139782028290592</title>\n",
        "<ellipse fill=\"none\" stroke=\"#000000\" cx=\"150.846\" cy=\"-143.9418\" rx=\"42.7926\" ry=\"42.7926\"/>\n",
        "<text text-anchor=\"middle\" x=\"150.846\" y=\"-140.2418\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">qualcuno</text>\n",
        "</g>\n",
-       "<!-- proteggere_139782076271248&#45;&gt;qualcuno_139782075831632 -->\n",
+       "<!-- proteggere_139782093089368&#45;&gt;qualcuno_139782028290592 -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>proteggere_139782076271248&#45;&gt;qualcuno_139782075831632</title>\n",
+       "<title>proteggere_139782093089368&#45;&gt;qualcuno_139782028290592</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" d=\"M111.5687,-243.1285C117.7392,-227.5461 124.7002,-209.9677 131.0294,-193.9844\"/>\n",
        "<polygon fill=\"#000000\" stroke=\"#000000\" points=\"134.4483,-194.8571 134.876,-184.2709 127.94,-192.2798 134.4483,-194.8571\"/>\n",
        "<text text-anchor=\"middle\" x=\"129.346\" y=\"-210.5878\" font-family=\"Times,serif\" font-size=\"14.00\" fill=\"#000000\">2</text>\n",
@@ -219,10 +219,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f218d008898>"
+       "<graphviz.files.Source at 0x7f218e012e48>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
