Bag of words baseline

--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -48,7 +48,7 @@
     "    score = data_frame.score[index]\n",
     "    premise_definition = text_to_4lang.get_definition(premise) #legyen-e expand\n",
     "    hypothesis_definition = text_to_4lang.get_definition(hypothesis)\n",
-    "    \n",
+    "    pred = similarity.asim_jac_words(premise_definition, hypothesis_definition)\n",
     "    if pred > 0:\n",
     "        preds.append(1)\n",
     "    else:\n",
@@ -96,7 +96,7 @@
     "    graph_hypothesis = text_to_4lang.process_text(hypothesis, True)\n",
     "    dot_graph_premise = graph_premise.to_dot()\n",
     "    dot_graph_hypothesis = graph_hypothesis.to_dot()\n",
-    "    pred = similarity.asim_jac_edges(graph_hypothesis, graph_premise)\n",
+    "    pred = similarity.asim_jac_edges(graph_premise, graph_hypothesis)\n",
     "    if pred > 0:\n",
     "        preds.append(1)\n",
     "    else:\n",
