--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,10 @@
     "import networkx as nx\n",
     "from networkx.readwrite import json_graph\n",
     "from fourlang.text_to_4lang import TextTo4lang\n",
+    "from fourlang.lexicon import Lexicon\n",
     "from graphviz import Source\n",
     "from scripts.parse_data import read\n",
-    "from scripts.similarity import *"
+    "from scripts.similarity import Similarity"
    ]
   },
   {
@@ -21,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_frame = read(\"it\")"
+    "lang = \"it\"\n",
+    "data_frame = read(lang)"
    ]
   },
   {
@@ -42,7 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_to_4lang = TextTo4lang(lang=\"it\")"
+    "text_to_4lang = TextTo4lang(lang=lang)\n",
+    "lexicon = Lexicon(lang=lang)\n",
+    "similarity = Similarity(lang=lang)"
    ]
   },
   {
@@ -52,7 +56,13 @@
    "outputs": [],
    "source": [
     "graph_premise = text_to_4lang.process_text(premise, True) #legyen-e expand\n",
-    "graph_hypothesis = text_to_4lang.process_text(hypothesis, True) #legyen-e expand"
+    "graph_hypothesis = text_to_4lang.process_text(hypothesis, True) #legyen-e expand\n",
+    "def_premise = \"\"\n",
+    "def_hypothesis = \"\"\n",
+    "if premise in lexicon.lexicon:\n",
+    "    def_premise = lexicon.lexicon[premise]\n",
+    "if hypothesis in lexicon.lexicon:\n",
+    "    def_hypothesis = lexicon.lexicon[hypothesis]\n"
    ]
   },
   {
@@ -248,7 +258,7 @@
     }
    ],
    "source": [
-    "asim_jac_edges(graph_hypothesis, graph_premise), score"
+    "similarity.asim_jac_edges(graph_premise, graph_hypothesis), score"
    ]
   },
   {
@@ -268,7 +278,34 @@
     }
    ],
    "source": [
-    "asim_jac_nodes(graph_hypothesis, graph_premise), score"
+    "similarity.asim_jac_nodes(graph_premise, graph_hypothesis), score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity.asim_jac_bow_elmo(def_premise, def_hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity.asim_jac_words(def_premise, def_hypothesis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity.asim_jac_nodes_elmo(premise, hypothesis, graph_premise, graph_hypothesis, def_premise, def_hypothesis)"
    ]
   }
  ],
