init cross lingual base

--- a/baselines.ipynb
+++ b/baselines.ipynb
@@ -27,6 +27,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity.init_cross_lingual_embeddings(\"en\", \"de\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
